dataRetrieval 2.7.18
===================
* Switched from httr to httr2
* Added a way to include a custom user-agent suffix via an enviornmental variable "CUSTOM_DR_UA"

dataRetrieval 2.7.17
===================
* Fixed bug with server problems causing errors.
* Removed the function "readNWISqw" since the underlying data was removed.
* Added message of service URL.
* Removed the forced "empty returns" for WQP, since the WQP now has properly formatted empty returns.
* Moved the column parsing to a dedicated function for WQP.
* Took out zip option for WQP calls, they are not allowed on WQP anymore.
* Added deprecated message getQuerySummary. Users should use readWQPsummary instead.
* Added WQX 3.0 profiles.
* siteInfo attribute for WQP queries converted to a full station return.
* Cleaned up date conversion in WQP
* Updated source for groundwater level data from waterservices to waterdata. Note that waterdata services will ALSO need updating within the next year, but this change will allow for some time to make changes.

dataRetrieval 2.7.16
===================
* Changed the base URL for groundwater level services since GW Levels RDB formats will be discontinued after August 5, 2024. 
* Groundwater queries can no longer support siteStatus and siteType. Updates to the services are expected in the next year and those queries will return.
* Updated parameterCdFile.

dataRetrieval 2.7.15
===================
* Update warning about upcoming changes to USGS water quality data.
* Added date sorting to all WQP functions.


dataRetrieval 2.7.14
===================
* Package documentation updated due to roxygen changes
* Update in NLDI function to allow for sites with spaces in the site abbrievations.
* Added an automatic endDate to whatNWISdata if a startDate is given, to make sure it behaves as expected.

dataRetrieval 2.7.13
===================
* Added pcode_to_name function to get WQP characteristics from USGS parameter codes.
* Required readr version 1.4 or greater.
